--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<head><title>Data Scietist</title></head>
+<head><title>Data Scientist</title></head>
 <body>
-<h2>Welcome</h2>
+<h2>Welcome to Data Scientist</h2>
 </body>
 </html>
